# soraX

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: sync-upstream.yml
app/src/main/java/io/github/rosemoe/sora/app/: MainActivity.kt
editor/: build.gradle.kts
editor-lsp/: build.gradle.kts
editor-lsp/src/main/java/io/github/rosemoe/sora/lsp/editor/: LspEditor.kt
editor/src/main/java/io/github/rosemoe/sora/lang/completion/: comparators.kt
editor/src/main/java/io/github/rosemoe/sora/text/: TextUtils.java
editor/src/main/java/io/github/rosemoe/sora/widget/: CodeEditor.java
editor/src/main/java/io/github/rosemoe/sora/widget/component/: EditorTextActionWindow.java  TextActionItem.kt
language-textmate/: build.gradle.kts
oniguruma-native/: build.gradle.kts
oniguruma-native/src/main/cpp/: CMakeLists.txt
